--- a/source/block/_denis.scss
+++ b/source/block/_denis.scss
@@ -11,7 +11,11 @@
         display: flex;
         justify-content: center;
         padding-top: 70px;
+
         // max-width: 950px;
+        img {
+            transition: all .3s;
+        }
     }
 
     &__inner {
@@ -71,3 +75,7 @@
 //     transform: translate(0.5rem, 0.5rem);
 //     box-shadow: 0px 10px 20px -15px rgba(0, 0, 0, 0.75);
 // }
+
+.denis__img img:hover {
+    transform: scale(1.1);
+}
