--- a/source/style.css
+++ b/source/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Tilt Neon", cursive;
+  overflow-x: hidden;
 }
 
 li {
@@ -15,6 +16,10 @@ li {
 a {
   text-decoration: none;
   display: inline-block;
+}
+
+.active {
+  display: block;
 }
 
 .container {
@@ -38,8 +43,15 @@ a {
   line-height: 22px;
   transition: all 0.3s;
 }
+.header__menu {
+  display: none;
+}
 .header__list a:hover {
   transform: scale(1.2);
+}
+.header #burger {
+  display: none;
+  text-align: right;
 }
 
 .about {
@@ -67,6 +79,7 @@ a {
 .skills__inner {
   display: flex;
   justify-content: space-around;
+  flex-direction: column;
 }
 .skills__item {
   padding: 80px 0;
@@ -77,6 +90,11 @@ a {
 }
 .skills__item img {
   padding-top: 10px;
+  transition: all 0.3s;
+}
+
+.skills__item img:hover {
+  transform: scale(1.1);
 }
 
 .denis {
@@ -92,6 +110,9 @@ a {
   justify-content: center;
   padding-top: 70px;
 }
+.denis__img img {
+  transition: all 0.3s;
+}
 .denis__inner span {
   transform: rotate(-90deg);
   cursor: pointer;
@@ -104,6 +125,10 @@ a {
   color: black;
   font-weight: bold;
   margin-left: 7px;
+}
+
+.denis__img img:hover {
+  transform: scale(1.1);
 }
 
 .portfolio {
@@ -171,5 +196,69 @@ a {
 @media (max-width: 767px) {
   .active__img {
     width: 95%;
+  }
+}
+@media (max-width: 991px) {
+  .container {
+    max-width: 767px;
+  }
+  .denis__img img {
+    max-width: 800px;
+  }
+  .portfolio__item img {
+    max-width: 550px;
+  }
+}
+@media (max-width: 767px) {
+  .container {
+    max-width: 575px;
+  }
+  .header__wrapper {
+    position: relative;
+  }
+  .header #burger {
+    display: block;
+  }
+  .header__list {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 52%;
+    display: none;
+    width: 20%;
+    background-color: #fff;
+    margin: 0;
+    padding-left: 1.6%;
+    padding-top: 2%;
+    color: black;
+    flex-direction: column;
+    align-items: center;
+    transition: 0.4s ease all;
+    z-index: 10;
+  }
+  .header .active {
+    display: block;
+  }
+  .header__menu {
+    display: block;
+  }
+  .denis__img img {
+    max-width: 600px;
+  }
+}
+@media (max-width: 575px) {
+  .container {
+    max-width: 300px;
+  }
+  .denis__inner {
+    display: flex;
+    gap: 40px;
+  }
+  .denis__img img {
+    max-width: 350px;
+  }
+  .portfolio__item img {
+    max-width: 320px;
   }
 }/*# sourceMappingURL=style.css.map */
